--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <h3>Galeria de Fotos</h3>
         <p>Confira algumas imagens da trilha e da paisagem de araucárias:</p>
         <div class="gallery">
-          <img src="imagens/foto1.jpg" alt="Araucárias ao longo da trilha">
-          <img src="imagens/foto2.jpg" alt="Mirante com vista do vale">
-          <img src="imagens/foto3.jpg" alt="Cachoeira do Pinhal">
-          <img src="imagens/foto4.jpg" alt="Bosque de araucárias">
+          <img src="foto1.jpg" alt="Araucárias ao longo da trilha">
+          <img src="foto2.jpg" alt="Mirante com vista do vale">
+          <img src="foto3.jpg" alt="Cachoeira do Pinhal">
+          <img src="foto4.jpg" alt="Bosque de araucárias">
         </div>
       </section>
     </main>
