--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header>
       <div class="brand">
         <div class="logo" aria-hidden="true">
-          <img src="imagens/logo.png" alt="Logo">
+          <img src="logo.png" alt="Logo">
         </div>
         <div>
           <h1>Santiero das Araucárias</h1>
