--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Trilha Santiero das Araucárias</title>
-  <meta name="description" content="Trilha Santiero das Araucárias — uma experiência imersiva pela mata de araucárias." />
+  <title>Titulo</title>
+  <meta name="description" content="Desc" />
   <style>
     :root{
       --bg:#e9f2ee;
@@ -54,8 +54,8 @@
           <img src="logo.png" alt="Logo">
         </div>
         <div>
-          <h1>Santiero das Araucárias</h1>
-          <p class="lead">Trilha — flora nativa, mirantes e um caminho entre araucárias centenárias</p>
+          <h1>PPPPPPP</h1>
+          <p class="lead">XAXAXAXA</p>
         </div>
       </div>
     </header>
@@ -68,30 +68,30 @@
         </article>
 
         <article class="card">
-          <h3>Dicas práticas</h3>
-          <p>Ltivas.</p>
+          <h3>Sobre</h3>
+          <p>Lt</p>
         </article>
 
         <article class="card">
           <h3>Di</h3>
-          <p>Leve árias nativas.</p>
+          <p>Ladd.</p>
         </article>
       </div>
 
       <section class="card" style="margin-top:30px">
-        <h3>Galeria de Fotos</h3>
-        <p>Confira algumas imagens da trilha e da paisagem de araucárias:</p>
+        <h3>Fotos</h3>
+        <p>DescFotos:</p>
         <div class="gallery">
-          <img src="foto1.jpg" alt="Araucárias ao longo da trilha">
-          <img src="foto2.jpg" alt="Mirante com vista do vale">
-          <img src="foto3.jpg" alt="Cachoeira do Pinhal">
-          <img src="foto4.jpg" alt="Bosque de araucárias">
+          <img src="foto1.jpg" alt="Ft1">
+          <img src="foto2.jpg" alt="FT2">
+          <img src="foto3.jpg" alt="FT3">
+          <img src="foto4.jpg" alt="FT4">
         </div>
       </section>
     </main>
 
     <footer>
-      ™ Santiero das Araucárias • Feito para demonstração
+      ™  • Feito para demonstração
     </footer>
   </div>
 
