--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <img src="foto2.jpg" alt="FT2">
           <img src="foto3.jpg" alt="FT3">
           <img src="foto4.jpg" alt="FT4">
+          <img src="foto5.jpg" alt="FT5">
         </div>
       </section>
     </main>
