--- a/index.html
+++ b/index.html
@@ -182,18 +182,18 @@
     <main id="sobre">
       <div class="card-row">
         <article class="card">
-          <h3>trilha</h3>
-          <p>atureza.</p>
+          <h3>Texto1</h3>
+          <p>Descriçao Texto 1</p>
         </article>
 
         <article class="card">
-          <h3>Sobre</h3>
-          <p>Lt</p>
+          <h3>Texto2</h3>
+          <p>Descriçaotexto2</p>
         </article>
 
         <article class="card">
-          <h3>Di</h3>
-          <p>Ladd.</p>
+          <h3>Texto3</h3>
+          <p>Descriçaotexto3</p>
         </article>
       </div>
 
@@ -211,7 +211,7 @@
     </main>
 
     <footer>
-      ™  • Feito para demonstração
+      ™  • Feito para demonstração, em fase de testes.
     </footer>
   </div>
 
