--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
           <img src="logo.png" alt="Logo">
         </div>
         <div>
-          <h1>PPPPPPP</h1>
-          <p class="lead">XAXAXAXA</p>
+          <h1>Sentiero das Araucárias</h1>
+          <p class="lead">Trilha Ecológica</p>
         </div>
       </div>
     </header>
@@ -182,18 +182,34 @@
     <main id="sobre">
       <div class="card-row">
         <article class="card">
-          <h3>Texto1</h3>
-          <p>Descriçao Texto 1</p>
+          <h3>Sobre o Projeto</h3>
+          <p>O Sentiero das Araucárias é uma trilha ecológica criada para promover o conhecimento, a preservação e a socialização do saber sobre a flora da Mata Atlântica.
+Localizada nos fundos da Escola, a trilha oferece uma experiência educativa e científica, aproximando os estudantes da natureza e da importância da conservação ambiental.</p>
         </article>
 
         <article class="card">
-          <h3>Texto2</h3>
-          <p>Descriçaotexto2</p>
+          <h3>A mata Atlântica</h3>
+          <p>A Mata Atlântica é um dos biomas mais ricos e diversos do planeta, abrigando inúmeras espécies endêmicas que desempenham papel essencial no equilíbrio ecológico.
+Apesar de sua importância, sua cobertura original foi severamente reduzida pelo desmatamento e outras ações humanas. Por isso, a educação ambiental é essencial para sensibilizar a comunidade sobre a preservação da biodiversidade.</p>
         </article>
 
         <article class="card">
-          <h3>Texto3</h3>
-          <p>Descriçaotexto3</p>
+          <h3>A flora da trilha</h3>
+          <p>Durante o projeto, foram estudados quatro grandes grupos de plantas — Briófitas, Pteridófitas, Gimnospermas e Angiospermas:
+
+Briófitas: plantas simples e pequenas, sem vasos condutores, que vivem em locais úmidos e ajudam a manter a umidade do solo.
+
+Pteridófitas: como as samambaias e avencas, possuem vasos condutores e se reproduzem por esporos.
+
+Gimnospermas: incluem as Araucárias, símbolo da trilha, que produzem sementes mas não frutos.
+
+Angiospermas: o grupo mais diverso, com flores e frutos como o feijão, milho e laranja, essenciais na alimentação e polinização.</p>
+        </article>
+
+        <article class="card">
+          <h3>Atividades Realizadas</h3>
+          <p>Os alunos participaram de saídas de campo na Trilha Ecológica Sentiero das Araucárias, realizando observações, registros fotográficos e identificação das espécies com auxílio de aplicativos.
+As coletas foram sustentáveis — apenas folhas e flores — e, em laboratório, o material foi prensado e seco, resultando na criação de um herbário escolar com exemplares catalogados.</p>
         </article>
       </div>
 
@@ -202,10 +218,6 @@
         <p>DescFotos:</p>
         <div class="gallery">
           <img src="foto1.jpg" alt="Ft1">
-          <img src="foto2.jpg" alt="FT2">
-          <img src="foto3.jpg" alt="FT3">
-          <img src="foto4.jpg" alt="FT4">
-          <img src="foto5.jpg" alt="FT5">
         </div>
       </section>
     </main>
