--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Titulo</title>
-  <meta name="description" content="Desc" />
+  <title>Sentiero das Araucarias</title>
+  <meta name="description" content="Trilha Ecológica" />
   <style>
     :root{
       --bg:#e9f2ee;
