--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ As coletas foram sustentáveis — apenas folhas e flores — e, em laboratório
         <article class="card">
           <h3>Quebra Cabeça</h3>
           <p>Jogo quebra-cabeça</p>
-          <button id="openPuzzle" style="margin-top:12px">Jogar Quebra-Cabeça</button>
+          <button id="openPuzzle">Jogar Quebra-Cabeça</button>
         </article>
       </div>
 
