Update puzzle title and image alt text in index.html
Changed the puzzle modal title from 'Quebra-Cabeça 4x4' to 'Quebra-Cabeça' and updated the image alt attribute from 'Ft1' to 'Araucaria Generica' for better clarity and accessibility.

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ As coletas foram sustentáveis — apenas folhas e flores — e, em laboratório
       <div id="puzzleModal" class="modal">
         <div class="modal-content">
           <button id="closeModal" class="close-btn">&times;</button>
-          <h2>Quebra-Cabeça 4x4</h2>
+          <h2>Quebra-Cabeça</h2>
           <p>Arraste as peças para montar a imagem.</p>
           <div class="modal-body">
             <div class="pieces" id="pieces"></div>
@@ -249,7 +249,7 @@ As coletas foram sustentáveis — apenas folhas e flores — e, em laboratório
         <h3>Fotos</h3>
         <p>DescFotos:</p>
         <div class="gallery">
-          <img src="foto1.jpg" alt="Ft1">
+          <img src="foto1.jpg" alt="Araucaria Generica">
         </div>
       </section>
     </main>
