Update footer with version and year info
The footer now displays the version as 5.0 and the year 2025, along with decorative symbols.

--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@ As coletas foram sustentáveis — apenas folhas e flores — e, em laboratório
     </main>
 
     <footer>
-      •.
+      ♪‱¿•versão 5.0    ‱•¿♪ &nbsp; | &nbsp; 2025
+
     </footer>
   </div>
 
