Update puzzle instructions and version number
Clarified the puzzle instructions to indicate that pieces should be dragged and held. Updated the footer to reflect version 5.1.

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ button .ripple{position:absolute;border-radius:50%;transform:scale(0);opacity:.7
           <div class="modal-content">
             <button id="closeModal" class="close-btn">&times;</button>
             <h2>Quebra-Cabeça</h2>
-            <p>Arraste as peças para montar a imagem.</p>
+            <p>Arraste as peças e segure para montar a imagem.</p>
             <div class="modal-body">
               <div class="pieces" id="pieces"></div>
               <div class="board" id="board"></div>
@@ -306,7 +306,7 @@ button .ripple{position:absolute;border-radius:50%;transform:scale(0);opacity:.7
       </main>
 
       <footer>
-      ♪‱¿•versão 5.0    ‱•¿♪ &nbsp; | &nbsp; 2025
+      ♪‱¿•versão 5.1    ‱•¿♪ &nbsp; | &nbsp; 2025
 
       </footer>
     </div>
