--- a/index.html
+++ b/index.html
@@ -301,12 +301,13 @@ button .ripple{position:absolute;border-radius:50%;transform:scale(0);opacity:.7
           <p>DescFotos:</p>
           <div class="gallery">
             <img src="foto1.jpg" alt="Araucaria Generica">
+            <img src="foto2.jpg" alt="Mapa da trilha">
           </div>
         </section>
       </main>
 
       <footer>
-      ♪‱¿•versão 5.2    ‱•¿♪ &nbsp; | &nbsp; 2025
+      ♪‱¿•versão 5.3    ‱•¿♪ &nbsp; | &nbsp; 2025
 
       </footer>
     </div>
@@ -502,3 +503,4 @@ button .ripple{position:absolute;border-radius:50%;transform:scale(0);opacity:.7
 </body>
 
 </html>
+
