--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@ button .ripple{position:absolute;border-radius:50%;transform:scale(0);opacity:.7
           <p>DescFotos:</p>
           <div class="gallery">
             <img src="foto1.jpg" alt="Araucaria Generica">
-            <img src="foto2.jpg" alt="Mapa da trilha">
+            <img src="foto2.jpg" alt="Mapa da trilha inteiro">
+            <img src="foto3.jpg" alt="Mapa da trilha">
           </div>
         </section>
       </main>
@@ -503,4 +504,5 @@ button .ripple{position:absolute;border-radius:50%;transform:scale(0);opacity:.7
 </body>
 
 </html>
+
 
